Removed use of Set.of and Path.of